# qmcp

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NOTICE  README.md  README.ru.md  docker-entrypoint.sh  opencode.json  pyproject.toml
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: configmap.yaml  deployment.yaml  httproute.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: COLLECTION_SETUP.md  STRUCTURED_METADATA.md  STRUCTURED_METADATA.ru.md  TROUBLESHOOTING.md
skills/qmcp-manager/: SKILL.md
src/: main.py
src/qmcp/: __init__.py  __main__.py  cleanup.py  client.py  config.py  diagnostics.py  indexer.py  logging_config.py  models.py  server.py  watcher.py
src/qmcp/parser/: __init__.py  base.py  multi.py  python.py
tests/: __init__.py  test_cleanup.py  test_client.py  test_diagnostics.py  test_indexer.py  test_parser.py  test_server.py  test_watcher.py
